--- a/src/components/Navbars/navbar.css
+++ b/src/components/Navbars/navbar.css
@@ -3,10 +3,14 @@
     display: flex;
     justify-content: space-around;
 }
-.NavbarTop p{
+.NavbarTop 
+p, 
+NavLink,
+button{
     font-size: 15px;
     display: inline-block;
     padding: 0 5em;
+    margin: 2em;
 }
 .NavbarBottom span{
     background-color: yellow;
