--- a/src/components/ProfileComponents/profile.css
+++ b/src/components/ProfileComponents/profile.css
@@ -1,17 +1,17 @@
 .Contributor ul,
 .Admin ul,
-.User ul {
+#User ul {
     list-style-type: none
 }
 .Contributor li,
 .Admin li,
-.User li {
+#User li {
     display: inline-block;
         margin: 0 5%;
 }
 .Contributor button,
 .Admin button,
-.User button {
+#User button {
     font-size: 35px;
     padding: 25px;
     margin: 25px;
