--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,10 @@
 
 #program {
     border: 5px solid black;
-    margin: 10px;
+    margin: 15% 0%;
 }
+body {
+    position: relative;
+    min-height: 100vh;
+    min-width: 1200px;
+  }
