--- a/src/App.css
+++ b/src/App.css
@@ -2,48 +2,22 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 .App nav {
-  background-color: #282c34;
+  width: 100%;
+    text-align: center;
+    background-color: #282c34;
+    vertical-align:bottom;
+    
+    height:80px;
+    padding-top: 10px;
 }
 
 .App nav li {
-  text-decoration: none;
   display: inline-block;
-  padding: 20px;
+  font-size: 18px;
+  margin: 20px;
+  vertical-align:bottom;
+  line-height:normal;  
 }
 
 .App nav a {
@@ -55,9 +29,25 @@
 }
 
 .App .logo{
-display: block;
-align-items: left;
-justify-content: left;
-position:relative;
-padding: 20px;
+  position:absolute;
+  left:10px;
+  margin: 0px 10px 10px 0px;
+}
+
+.App button{
+  background-color: #282c34;
+  border: none;
+  color: white;
+  padding: 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  margin: 4px 2px;
+  border-radius: 4px;
+}
+
+.App td{
+  text-align: center;
+  justify-content: center;
 }
