--- a/src/App.css
+++ b/src/App.css
@@ -40,18 +40,33 @@
   background-color: #282c34;
   border: none;
   color: white;
-  padding: 15px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 14px;
-  margin: 4px 2px;
   border-radius: 4px;
 }
 
-.App button :hover{
-  background: grey;
+.login-btn {
+  background-color: #282c34;
+  border: none;
+  color: white;
+  padding: 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 4px;
+  margin: 4px 2px;
+  border-radius: 4px;
 }
+.login-btn-grp {
+  margin-top: 7%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
 
 .App td{
   text-align: center;
