--- a/src/forms/exercise/exercise-style.css
+++ b/src/forms/exercise/exercise-style.css
@@ -7,4 +7,20 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
+}
+
+.input-grp {
+    display: flex;
+    flex-direction: column;
+    list-style-type: none;
+    align-items: flex-end;
+    list-style-type: none;
+}
+.input-grp li{
+
+    margin: 0.5% 0%;
+}
+.input-grp button {
+    margin: 1% 0%;
 }
