--- a/src/forms/exercise/exercise-style.css
+++ b/src/forms/exercise/exercise-style.css
@@ -1,7 +1,3 @@
-.GetAll th,
-.GetAll td{
-    border: 1px solid black;
-}
 
 .exercise-form {
     display: flex;
@@ -23,4 +19,25 @@
 }
 .input-grp button {
     margin: 1% 0%;
+}
+
+label {
+    display: grid;
+    margin: 10px;
+    padding-left: 300px;
+    padding-right: 300px;
+text-align: left;}
+
+input{
+    left: 10px;
+}
+
+button{
+    padding: 1%;
+    margin: 10px;
+}
+
+.edit  {
+    background-color: aqua;
+    padding: 1%;
 }
